# dusk-plonk

./: CHANGELOG.md  Cargo.toml  README.md
src/: bit_iterator.rs  builder.rs  circuit.rs  commitment_scheme.rs  compiler.rs  composer.rs  constraint_system.rs  debugger.rs  error.rs  fft.rs  gadget.rs  key.rs  lib.rs  permutation.rs  prelude.rs  proof_system.rs  prover.rs  runtime.rs  transcript.rs  util.rs  verifier.rs
src/builder/: prover.rs  verifier.rs
src/circuit/: compiler.rs  prover.rs  verifier.rs
src/commitment_scheme/: kzg10.rs
src/commitment_scheme/kzg10/: commitment.rs  key.rs  proof.rs  srs.rs
src/composer/: builder.rs  circuit.rs  compiler.rs  prover.rs  verifier.rs
src/constraint_system/: constraint.rs  ecc.rs  witness.rs
src/fft/: domain.rs  evaluations.rs  polynomial.rs
src/permutation/: constants.rs
src/proof_system/: linearization_poly.rs  preprocess.rs  proof.rs  quotient_poly.rs  widget.rs
src/proof_system/widget/: arithmetic.rs  ecc.rs  logic.rs  permutation.rs  range.rs
src/proof_system/widget/arithmetic/: proverkey.rs  verifierkey.rs
src/proof_system/widget/ecc/curve_addition/: proverkey.rs  verifierkey.rs
src/proof_system/widget/ecc/scalar_mul/: fixed_base.rs
src/proof_system/widget/ecc/scalar_mul/fixed_base/: proverkey.rs  verifierkey.rs
src/proof_system/widget/logic/: proverkey.rs  verifierkey.rs
src/proof_system/widget/permutation/: proverkey.rs  verifierkey.rs
src/proof_system/widget/range/: proverkey.rs  verifierkey.rs
src/prover/: linearization_poly.rs  proof.rs  quotient_poly.rs
tests/: boolean.rs  debugger.rs  decomposition.rs  ecc.rs  logic.rs  range.rs
