[package]
name = "zkplonk"
version = "0.0.1"
categories =["algorithms", "cryptography", "science", "mathematics"]
edition = "2021"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
license = "MPL-2.0"
repository = "https://github.com/dusk-network/plonk"
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm"
exclude = [
    "**/.gitignore",
    ".gitignore",
    "Cargo.lock",
    "**/examples",
    "benchmarks/",
    ".github/"
]

[dependencies]
rand_core = {version="0.6", default-features = false}
itertools = {version = "0.9", default-features = false}
hashbrown = {version = "0.9", default-features = false, features = ["ahash"]}
rayon = {version = "1.3", optional = true}
# Dusk related deps for WASMI serde
codec = { default-features = false, features = ['derive'], package = 'parity-scale-codec', version = '2.0.0' }
sp-std = { version = '3.0.0', default-features = false }

zkstd = {version = "0.0.22", default-features = false}
zksnarks = {version = "0.0.1", default-features = false}
poly-commit = {version = "0.0.13", default-features = false}
jub-jub = {version = "0.0.20", default-features = false}
ec-pairing = {version = "0.0.14", default-features = false}
bls-12-381 = {version = "0.0.23", default-features = false}

[dev-dependencies]
criterion = "0.3"
tempdir = "0.3"
rand = "0.8"

[features]
default = ["std"]
std = [
    "poly-commit/std",
    "itertools/default",
    "hashbrown/default",
    "alloc",
    "rayon"
]
alloc = []

[profile.release]
panic = "abort"
codegen-units = 1
overflow-checks = false
debug = true

[profile.bench]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = true
incremental = false
codegen-units = 1

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./docs/katex-header.html" ]
